--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <div class="nav-cont">
        <h4 class="navigation-cont">HTML5</h4>
        <h4 class="navigation-cont">CSS3</h4>
-       <h4 class="navigation-cont">JavaScript</h4>
+       <h4 class="navigation-cont">JAVASCRIPT</h4>
        </div>
     </header>
   <article class="image-cont">
